# bongodb

./: .gitignore  .gitlab-ci.yml  Makefile  README.md
bongo-core/: Cargo.toml
bongo-core/src/: bongo_request.rs  bongo_result.rs  bytes_on_disc.rs  conversions.rs  lib.rs  types.rs
bongo-lib/: Cargo.toml
bongo-lib-derive/: Cargo.toml
bongo-lib-derive/src/: derives.rs  helpers.rs  lib.rs
bongo-lib-derive/src/derives/: create_drop_table.rs  from_row.rs  insert.rs  select.rs  select_primary.rs
bongo-lib-derive/src/helpers/: attribute_helper.rs  fields_helper.rs
bongo-lib/src/: connection.rs  derives.rs  lib.rs  traits.rs  types.rs
bongo-server/: Cargo.toml
bongo-server/src/: ThreadPool.rs  bongo_request.rs  bongo_response.rs  bongo_server.rs  executor.rs  lib.rs  main.rs  serialize.rs  sql_parser.rs  statement.rs  types.rs  unsafe_sync_cell.rs  webserver.rs
bongo-server/src/archive/: main_tokio.rs
bongo-server/src/bongo_server/: bongo_request.rs  bongo_response.rs  executor.rs  request.rs  sql_parser.rs  statement.rs  statements.rs  types.rs  webserver.rs
bongo-server/src/sql_parser/: err_messages.rs  mod.rs  parser.rs
bongo-server/src/util/: conversions.rs
bongo-server/tests/: README.md
docs/: ClientLibrary.md  FeaturesOfBongoDB.md  Home.md  SystemArchitecture.md  design_draft.md
examples-and-tests/: Cargo.toml
webserver/: Cargo.toml
webserver/src/: lib.rs
