[package]
name = "bongo-lib-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.53", features = ["diff"]}

[dependencies]
syn = { version = "1.0.82", features = ["extra-traits"] }
quote = "1.0.10"
proc-macro2 = "1.0.36"