[package]
name = "bongo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "thread_pool"
path = "src/ThreadPool.rs"
version = "0.1.0"

[dependencies]
tokio = { version = "1", features = ["full"] }